xxxx 2006: 0.2.16 Miek <miek@miek.nl>
   rdup:
   * some updates for Solaris 10



1 Sep 2006: 0.2.15 Miek <miek@miek.nl>
   scripts:
   * refactored mirror.sh, rorrim.sh, monthday.sh, mirror.pl
   * dump.sh: more quotes for dirs with spaces. Re-add trailing spaces 
     to path names
   * coding style changes to the perl scripts.
   * rdup: add -l (local) option. Disable size checking for
     files when doing a local backup and don't skip the file.
   * Documentation updates


1 Jul 2006: 0.2.14 Miek <miek@miek.nl>
   -- misc. bugfixes and new features --
   scripts:
   * use dd for "catching" the files' content
   * eliminate the use of 'head' as this didn't work on freebsd
   * dump-here.sh must be edited before use (added exit 1)
   * Added pl-tools/ directory for perl contributed scripts:
     added gzip.pl and mirror.pl both from Mark J Hewitt
     These are up to 50 times faster than the shell scripts!
   * Remove rb-tools dir from distribution - not uses & not finished
   * moved wrapper scripts (dump.sh, dump-here.sh and restore.sh) to
     sh-wrapper/ directory
   * implement good bash coding style(Remarks from Bob Proulx)
     use booleans in the scripts
     kill whitespace
   rdup:
   * Don't re-check directories for changed files sizes
     and only check for files that are to be added.
   * Compilation fix for gcc 2.95; don't use %zd in printf
   * check return value of ftruncate()


26 May 2006: 0.2.13 Miek <miek@miek.nl>
   -- BACKWARD INCOMPATIBLE CHANGES --
   * dump.sh: drop req. argument NAME. This is now an option: -N NAME
   -- bugfixes and improvements --
   * monthday.sh: rewritten again...this time hopefully for the last
     time. It now is simpeler and local_restore and remote_restore
     are almost identical.
   * rdup: when a file changes size during the printing, skip it (Mark J Hewitt)
   * rdup: when a filename has a newline in it, skip it (Mark J Hewitt)


10 May 2006: 0.2.12 Miek <miek@miek.nl>
  -- bugfixes --